feat: complete TA job browsing, filtering, and sorting; integrated with Application and MO modules.